// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders the toast component with icon 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:border-success ds:bg-white ds:border-2 ds:min-w-[240px] ds:max-w-[480px] ds:inline-flex ds:min-h-8 ds:items-center ds:gap-3 ds:rounded-sm ds:py-3 ds:pl-4 ds:pr-5 ds:text-primary-gray ds:text-body-sm ds:font-arial"
  data-testid="toast2"
  role="alert"
>
  <span
    class="ds:shrink-0"
  >
    mood
  </span>
  <span>
    This is a toast message
  </span>
</div>
`;

exports[`Toast > renders the toast component with text 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:border-success ds:bg-white ds:border-2 ds:min-w-[240px] ds:max-w-[480px] ds:inline-flex ds:min-h-8 ds:items-center ds:gap-3 ds:rounded-sm ds:py-3 ds:pl-4 ds:pr-5 ds:text-primary-gray ds:text-body-sm ds:font-arial"
  data-testid="toast"
  role="alert"
>
  <span
    class="ds:shrink-0"
  >
    <svg
      class="ds:text-success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.55 18.2965L3.85 12.5965L5.275 11.1715L9.55 15.4465L18.725 6.27148L20.15 7.69648L9.55 18.2965Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span>
    This is a toast message
  </span>
</div>
`;
